--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="top">
       <div class="brand">
         <h1>TalseRunner Secure Area</h1>
-        <p class="sub">데이터는 본인 브라우저에만 저장됨</p>
+        <p class="sub">데이터는 따로 저장되지 않음.</p>
       </div>
       <button id="themeToggle" class="ghost">다크모드: ON</button>
     </header>
