--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <h1>TalesRunner Conquest Scoreboard</h1>
         <p class="sub">데이터는 본인 브라우저에만 저장됨</p>
       </div>
-      <button id="themeToggle" class="ghost">다크모드: ON</button>
     </header>
 
     <section class="card" id="registerCard">
@@ -33,7 +32,7 @@
     <section class="card hidden" id="scoreCard">
       <div class="card-head">
         <h2>점령 점수 입력</h2>
-        <div class="hint">골인(숫자) · 리타(리/리타) · 초사(초/초사)</div>
+        <div class="hint">골인(숫자orN등)· 리타(리/리타) · 초사(초/초사) / 예시 : 1 / 2리 / 3초</div>
       </div>
 
       <div id="scoreInputs" class="grid"></div>
@@ -56,7 +55,7 @@
 
     <section class="card" id="bottomCard">
       <div class="row">
-        <div class="muted">입력 규칙: 골인(숫자) · 리타(리/리타) · 초사(초/초사)</div>
+        <button id="themeToggle" class="ghost">다크모드: ON</button>
         <div class="spacer"></div>
         <button id="resetAll" class="danger">리셋</button>
       </div>
