--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TalesRunner Conquest Scoreboard</title>
+  <title>TR Conquest Scoreboard</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -39,7 +39,7 @@
 
       <div class="row">
         <button id="addRound">점수 추가</button>
-        <button id="undoRound" class="ghost">되돌리기</button>
+        <button id="clearInputs" class="ghost">다시 입력</button>
         <div class="spacer"></div>
         <span id="playStatus" class="pill"></span>
       </div>
@@ -56,6 +56,7 @@
     <section class="card" id="bottomCard">
       <div class="row">
         <button id="themeToggle" class="ghost">다크모드: ON</button>
+        <button id="undoRound" class="ghost">되돌리기</button>
         <div class="spacer"></div>
         <button id="resetAll" class="danger">리셋</button>
       </div>
