--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TR Conquest Scoreboard</title>
+  <title>TalesRunner Conquest Scoreboard</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -11,14 +11,14 @@
     <header class="top">
       <div class="brand">
         <h1>TalesRunner Conquest Scoreboard</h1>
-        <p class="sub">데이터는 본인 브라우저에만 저장됨</p>
+        <p class="sub">데이터는 이 브라우저에만 저장돼요</p>
       </div>
     </header>
 
     <section class="card" id="registerCard">
       <div class="card-head">
         <h2>선수 등록</h2>
-        <div class="hint">인원수 4명(고정) · 닉네임 중복 불가</div>
+        <div class="hint">인원은 4명 고정 · 닉네임은 중복 없이</div>
       </div>
 
       <div id="playerInputs" class="grid"></div>
@@ -48,7 +48,7 @@
     <section class="card hidden" id="boardCard">
       <div class="card-head">
         <h2>점수판</h2>
-        <div class="hint">총 판수는 30판 기준으로 된다</div>
+        <div class="hint">총 판수는 30판 기준으로 돼요</div>
       </div>
       <div id="board"></div>
     </section>
