--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="card" id="registerCard">
       <div class="card-head">
         <h2>선수 등록</h2>
-        <div class="hint">인원은 4명 고정 · 닉네임은 중복 없이</div>
+        <div class="hint">인원은 4명 고정 · 닉네임은 중복 불가</div>
       </div>
 
       <div id="playerInputs" class="grid"></div>
@@ -32,7 +32,7 @@
     <section class="card hidden" id="scoreCard">
       <div class="card-head">
         <h2>점령 점수 입력</h2>
-        <div class="hint">골인(숫자orN등)· 리타(리/리타) · 초사(초/초사) / 예시 : 1 / 2리 / 3초</div>
+        <div class="hint">골인(숫자·N등) · 리타(리/리타) · 초사(초/초사) / 예시 → 1 / 2리 / 3초</div>
       </div>
 
       <div id="scoreInputs" class="grid"></div>
@@ -48,7 +48,7 @@
     <section class="card hidden" id="boardCard">
       <div class="card-head">
         <h2>점수판</h2>
-        <div class="hint">총 판수는 30판 기준으로 돼요</div>
+        <div class="hint">총 판수는 30판 기준 임!</div>
       </div>
       <div id="board"></div>
     </section>
