--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="top">
       <div class="brand">
         <h1>TalesRunner Conquest Scoreboard</h1>
-        <p class="sub">데이터는 이 브라우저에만 저장돼요</p>
+        <p class="sub">재접속해도 리셋안하면 데이터는 유지 됨.</p>
       </div>
     </header>
 
@@ -48,14 +48,14 @@
     <section class="card hidden" id="boardCard">
       <div class="card-head">
         <h2>점수판</h2>
-        <div class="hint">총 판수는 30판 기준 임!</div>
+        <div class="hint">※ 판수 → 30판 · 최고점수 → 31320점 </div>
       </div>
       <div id="board"></div>
     </section>
 
     <section class="card" id="bottomCard">
       <div class="row">
-        <button id="themeToggle" class="ghost">다크모드: ON</button>
+        <button id="themeToggle" class="ghost">다크모드 ON</button>
         <button id="undoRound" class="ghost">되돌리기</button>
         <div class="spacer"></div>
         <button id="resetAll" class="danger">리셋</button>
