--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section class="card hidden" id="scoreCard">
       <div class="card-head">
-        <h2>점령 점수 입력</h2>
+        <h2>점령전 점수 입력</h2>
         <div class="hint">골인(숫자·N등) · 리타(리/리타) · 초사(초/초사) / 예시 → 1 / 2리 / 3초</div>
       </div>
 
