--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="top">
       <div class="brand">
         <h1>TalesRunner Conquest Scoreboard</h1>
-        <p class="sub">재접속해도 리셋안하면 데이터는 유지 됨.</p>
+        <p class="sub">재접속해도 리셋안하면 데이터는 유지 · 제작 Xesi </p>
       </div>
     </header>
 
