--- a/result.html
+++ b/result.html
@@ -18,7 +18,7 @@
     <section class="card">
       <div class="card-head">
         <h2>사진</h2>
-        <div class="hint">원하는 사진 올리면 정산 화면에 같이 보여줘요</div>
+        <div class="hint">원하는 사진 올리면 정산 화면에 같이 보여줍니다.</div>
       </div>
       <div class="row">
         <input id="photo" type="file" accept="image/*" />
@@ -33,7 +33,7 @@
     <section class="card">
       <div class="card-head">
         <h2>30판 요약</h2>
-        <div class="hint">캡처하기 좋게 한 줄로 정리했어요</div>
+        <div class="hint">최종 점수판  · 등수 정산</div>
       </div>
       <div id="summary"></div>
     </section>
