--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TR Conquest Scoreboard</title>
+  <title>TalesRunner Conquest Scoreboard</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
     <header class="top">
       <div class="brand">
         <h1>TalesRunner Conquest Scoreboard</h1>
-        <p class="sub">새로고침 하면 데이터 초기화 됨· 제작 Xesi</p>
+        <p class="sub">새로고침 하면 데이터 초기화 됨 · 제작 Xesi</p>
       </div>
     </header>
 
@@ -30,7 +30,7 @@
     <section class="card hidden" id="scoreCard">
       <div class="card-head">
         <h2>점령 점수 입력</h2>
-        <div class="hint">골인(숫자·N등) · 리타(리/리타) · 초사(초/초사) / 예시 → 1 / 2리 / 3초</div>
+        <div class="hint">골인(숫자orN등)· 리타(리/리타) · 초사(초/초사) / 예시 : 1 / 2리 / 3초</div>
       </div>
       <div id="scoreInputs" class="grid"></div>
       <div class="row">
