--- a/result.html
+++ b/result.html
@@ -33,7 +33,7 @@
       </div>
 
       <div id="photoBox" class="photoBox hidden">
-        <div class="frame">
+        <div class="frame frame169">
           <img id="photoImg" alt="photo" />
         </div>
       </div>
