--- a/result.html
+++ b/result.html
@@ -8,12 +8,14 @@
 </head>
 <body>
   <div class="wrap settleWrap">
-    <header class="top settleTop">
-      <div class="brand">
-        <h1>정산</h1>
-        <p class="sub" id="stampText"></p>
+    <header class="settleHeader">
+      <div class="settleHeaderLeft">
+        <div class="settleTitle">30판 요약</div>
+        <div class="settleTime" id="settleTime"></div>
       </div>
-      <div class="stamp" id="stamp">FINAL RESULT</div>
+      <div class="settleHeaderRight">
+        <div class="stamp">FINAL RESULT</div>
+      </div>
     </header>
 
     <section class="card">
@@ -41,7 +43,7 @@
 
     <section class="card">
       <div class="card-head">
-        <h2>30판 요약</h2>
+        <h2>최종 정산</h2>
         <div class="hint">최종 점수판  · 등수 정산</div>
       </div>
       <div id="summary"></div>
