--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <button id="importData" class="ghost">불러오기</button>
         <button id="settle" class="ghost">정산</button>
         <button id="resetAll" class="danger">리셋</button>
-        <input id="importFile" type="file" accept="application/json" class="hidden" />
+        <input id="importFile" type="file" accept="application/json" class="fileHidden" />
       </div>
     </section>
   </div>
