--- a/result.html
+++ b/result.html
@@ -10,11 +10,11 @@
   <div class="wrap settleWrap">
     <header class="settleHeader">
       <div class="settleHeaderLeft">
-        <div class="settleTitle">30판 요약</div>
+        <div class="settleTitle">최종 정산</div>
         <div class="settleTime" id="settleTime"></div>
       </div>
       <div class="settleHeaderRight">
-        <div class="stamp">FINAL RESULT</div>
+        <div class="stamp">Finish !</div>
       </div>
     </header>
 
