--- a/result.html
+++ b/result.html
@@ -31,7 +31,7 @@
         </label>
         <button id="removePhoto" class="ghost">사진 제거</button>
         <div class="spacer"></div>
-        <button id="back" class="ghost">점수판 돌아가기</button>
+        <button id="back" class="primary">점수판 돌아가기</button>
       </div>
 
       <div id="photoBox" class="photoBox hidden">
