--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="card" id="registerCard">
       <div class="card-head">
         <h2>선수 등록</h2>
-        <div class="hint">인원은 4명 고정 · 닉네임은 중복 불가</div>
+        <div class="hint">인원 4명 고정 · 닉네임 중복 불가</div>
       </div>
       <div id="playerInputs" class="grid"></div>
       <div class="row">
