--- a/result.html
+++ b/result.html
@@ -21,7 +21,7 @@
     <section class="card">
       <div class="card-head">
         <h2>사진</h2>
-        <div class="hint">원하는 사진 올리면 정산 화면에 같이 보여줍니다.</div>
+        <div class="hint">원하는 사진 올리면 정산 화면에 같이 보여줘요</div>
       </div>
 
       <div class="row">
@@ -43,8 +43,8 @@
 
     <section class="card">
       <div class="card-head">
-        <h2>최종 정산</h2>
-        <div class="hint">최종 점수판  · 등수 정산</div>
+        <h2>점수 요약</h2>
+        <div class="hint">최종 점수판 · 등수 정산</div>
       </div>
       <div id="summary"></div>
     </section>
