--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <section class="card" id="bottomCard">
       <div class="row">
-        <button id="themeToggle" class="ghost">다크모드 ON</button>
+        <button id="themeToggle" class="ghost">다크모드: ON</button>
         <button id="undoRound" class="ghost">되돌리기</button>
         <div class="spacer"></div>
         <button id="exportData" class="ghost">저장</button>
