--- a/result.html
+++ b/result.html
@@ -21,7 +21,7 @@
     <section class="card">
       <div class="card-head">
         <h2>사진</h2>
-        <div class="hint">원하는 사진 올리면 정산 화면에 같이 보여줘요</div>
+        <div class="hint">원하는 사진 올리면 정산 화면에 같이 보여줍니다.</div>
       </div>
 
       <div class="row">
